# resilient-and-adaptive-data-transmission

./: .gitignore  README.md  fragment.pb.cc  fragment.pb.h  fragment.proto
c++/: fragment.pb.cc  fragment.pb.h  fragment.proto
c++/adapt_ec_config_gtd_error/: CMakeLists.txt  README.md  sender_adapt_gtd_error.cpp
c++/adapt_ec_config_gtd_error copy/: sender_adapt_gtd_error.cpp
c++/adapt_ec_config_gtd_time/: receiver_adapt_gtd_time.cpp  sender_adapt_gtd_time.cpp
c++/adapt_ec_config_gtd_time_with_retrans/: CMakeLists.txt  README.md  receiver_adapt_gtd_time.cpp  sender_adapt_gtd_time.cpp
file_generation/: compile.txt  fragment.proto  generate_tiers  generate_tiers.cpp
quic/: README.md  go.mod  go.sum
quic/client/: client.go
quic/server/: server.go
sc1_adaptive/: CMakeLists.txt  README.md  receiver_adaptive.cpp  sender_adaptive.cpp
sc2_adaptive/: CMakeLists.txt  README.md  sender_sc2.cpp
simpy/: README.md
simpy/simulation_adaptive_sc1/: README.md  formulaModule.py
simpy/simulation_adaptive_sc2/: README.md
simpy/simulation_static_sc1/: README.md  simulation.py
simulation/: README.md  requirements.txt
simulation/sim_adapt_ec_config_gtd_error/: README.md  sim_adapt_ec_config_gtd_error.py
simulation/sim_adapt_ec_config_gtd_time/: README.md  formulaModule_sc2.py  sim_adapt_ec_config_gtd_time.py
tcp/: CMakeLists.txt  receiver_tcp.cpp  sender_tcp.cpp
udp/: CMakeLists.txt  fragment.pb.cc  fragment.pb.h  fragment.proto  receiver_udp.cpp  sender_udp.cpp
udp_analysis2/: CMakeLists.txt  packet.pb.cc  packet.pb.h  packet.proto  udp_sender.cpp
(+1 files in other folders)
